Add fallback-version to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ Homepage = "https://github.com/firecat53/urlscan"
 
 [tool.hatch.version]
 source = "vcs"
+fallback-version = "0.0.0"
 
 [tool.hatch.build.hooks.vcs]
 version-file = "urlscan/_version.py"
