--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ Homepage = "https://github.com/firecat53/urlscan"
 source = "vcs"
 fallback-version = "0.0.0"
 
+[tool.hatch.version.raw-options]
+local_scheme = "no-local-version"
+
 [tool.hatch.build.hooks.vcs]
 version-file = "urlscan/_version.py"
 
