--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Hatch
         run: |
           python -m pip install --upgrade pip
-          pip install hatch
+          pip install hatch hatchling hatch-vcs
 
       - name: Build package
         run: hatch build
